--- a/_posts/2022-05-05-Day4.md
+++ b/_posts/2022-05-05-Day4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Day4"
+title:  "Type annotations / Empty Array"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
