--- a/_posts/2022-04-19-Day1.md
+++ b/_posts/2022-04-19-Day1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Day1"
+title:  "Variable / Constant = let /Intergers = numbers"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
