--- a/_posts/2022-04-29-Day2.md
+++ b/_posts/2022-04-29-Day2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Day2"
+title:  "Boolean / How to join strings together."
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
