--- a/_posts/2022-05-03-Day3.md
+++ b/_posts/2022-05-03-Day3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Day3"
+title:  "Arrays / Dictionaries / Sets / enumeration"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
