--- a/_posts/2022-05-13-Day5.md
+++ b/_posts/2022-05-13-Day5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "if & Logical Operator & Switch & fallthrough & Ternary conditional operator"
+title:  "If / Logical Operator / Switch / fallthrough / Ternary conditional operator"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
