--- a/_posts/2022-05-21-Day6.md
+++ b/_posts/2022-05-21-Day6.md
@@ -1,1 +1,173 @@
+---
+layout: post
+title:  "For Loop / While loop  / Continue / Break / How to Skip loop items"
+categories: SwiftUI
+tag: [iOS, SwiftUI, blog, jekyll]
+toc: true
+{:toc}
+toc_label: "Table of Contents"
+toc_icon: "cog"
+author_prifile: true
+sidebar:
+    nav: "docs"
+---
 
+# For Loop
+<br/>
+
+## Repeat strings in an Array
+if we have an array of strings, we can print each string out like this
+```swift
+import SwiftUI
+
+let platforms = ["iOS", "macOS", "watchOS", "tvOS"]
+
+for os in platforms {
+    print("Swift works great on \(os).")
+}
+```
+
+## Loop over a fixed range of numbers.
+```swift
+for i in 1...12 {
+    print("5 x \(i) = \(i * 5)")
+}
+```
+
+## Nested Loops, we can also put loops inside loops.
+```swift
+for i in 1...3 {
+    print("The \(i) times table:")
+    
+    for j in 1...5 {
+    print(" \(i) x \(j) = \(i * j)")
+    }
+    
+    print() //this helps break up our output so it looks nicer on the secreen. just add a new line.
+}
+```
+
+## "..<" this is a type of range that counts up to but excluding the final number. "..<" is really helpful for working with arrays, where we count from 0 and often want to count up to but excluding the number of items in the array. we'll see differences between "1...5" and "1..<5"
+```swift
+for i in 1...5 {
+    print("Counting from 1 through 5: \(i)")
+}
+
+for i in 1..<5 {
+    print("counting from 1 upto 5: \(i)")
+}
+```
+
+## "_", when we don't actually want the loop variable, we can replace it with and underscore_.
+```swift
+var lyric = "Haters gonna"
+for _ in 1...3 {
+    lyric += " hate,"
+}
+print(lyric)
+```
+
+we can use it in this way too.
+```swift
+let count = 1...3
+for _ in count {
+    print("There's no place like home.")
+}
+```
+
+
+<br/>
+
+# While loop
+## While loop will continually execute the loop body until the condition is false.
+```swift
+var countdown = 10
+
+while countdown > 0 {
+    print("\(countdown)...")
+    countdown -= 1
+}
+
+print("Blast off!")
+```
+
+## Random. Create a new random interger or decimal.
+```swift
+let id = Int.random(in: 1...10000)
+print(id)
+
+let amount = Double.random(in: 0...5)
+print(amount)
+```
+
+## While loop with random functionality.
+Let's roll some virtual 6 sided dice again and again, ending the loop only when a 5 is rolled.
+```swift
+var roll = 0 create an integer to store our roll
+
+while roll != 5 {
+    roll = Int.random(in: 1...6)
+    print("I rolled a \(roll)")
+}
+print("Finally 5!")
+```
+
+loops that prints 5 lines of text.
+```swift
+var counter = 2
+while counter < 64 {
+    print("\(counter) is a 2")
+    counter *= 2
+}
+```
+```swift
+var page: Int = 0
+while page < 5 {
+    page += 1
+    print("I'm reading page \(page).")
+}
+```
+```swift
+var cats: Int = 0
+while cats < 10 {
+    cats += 1
+    print("I'm getting another cat.")
+    if cats == 4 {
+        print("Enough cats.")
+        cats = 10
+    }
+}
+```
+
+<br/>
+
+# Continue, Break. How to Skip loop items
+
+## Continue,if we call "continue" inside the loop body, Swift will immediately stop executing the current loop iteration and jump to the next item in the loop, where it will carry on as normal.
+```swift
+let filenames = ["my photo.jpg", "Work.txt", "someone.jpg", "logo.psd"]
+
+for filename in filenames {
+    if filename.hasSuffix(".jpg") == false {
+        continue
+    }
+    print("Found Picture: \(filename)")
+}
+```
+## Break, that exits a loop immediately and skips all remaining iterations. 
+```swift
+let number1 = 4
+let number2 = 14
+var multiples = [Int]()
+
+for i in 1...100000 {
+    if i.isMultiple(of: number1) && i.isMultiple(of: number2) {
+        multiples.append(i)
+        
+        if multiples.count == 10 {
+            break
+        }
+    }
+}
+print(multiples)
+```
