--- a/_posts/2022-05-21-Day6.md
+++ b/_posts/2022-05-21-Day6.md
@@ -33,6 +33,12 @@ for i in 1...12 {
     print("5 x \(i) = \(i * 5)")
 }
 ```
+```swift
+Swift works great on iOS.
+Swift works great on macOS.
+Swift works great on watchOS.
+Swift works great on tvOS.
+```
 
 ## Nested Loops, we can also put loops inside loops.
 ```swift
