--- a/_posts/2022-05-21-Day6.md
+++ b/_posts/2022-05-21-Day6.md
@@ -39,7 +39,7 @@ for i in 1...12 {
     print("5 x \(i) = \(i * 5)")
 }
 ```
-```swift
+```python
 5 x 1 = 5
 5 x 2 = 10
 5 x 3 = 15
@@ -66,8 +66,27 @@ for i in 1...3 {
     print() //this helps break up our output so it looks nicer on the secreen. just add a new line.
 }
 ```
-```swift
+```python
+The 1 times table:
+ 1 x 1 = 1
+ 1 x 2 = 2
+ 1 x 3 = 3
+ 1 x 4 = 4
+ 1 x 5 = 5
 
+The 2 times table:
+ 2 x 1 = 2
+ 2 x 2 = 4
+ 2 x 3 = 6
+ 2 x 4 = 8
+ 2 x 5 = 10
+
+The 3 times table:
+ 3 x 1 = 3
+ 3 x 2 = 6
+ 3 x 3 = 9
+ 3 x 4 = 12
+ 3 x 5 = 15
 ```
 
 ## "..<" this is a type of range that counts up to but excluding the final number. "..<" is really helpful for working with arrays, where we count from 0 and often want to count up to but excluding the number of items in the array. we'll see differences between "1...5" and "1..<5"
@@ -80,6 +99,17 @@ for i in 1..<5 {
     print("counting from 1 upto 5: \(i)")
 }
 ```
+```swift
+Counting from 1 through 5: 1
+Counting from 1 through 5: 2
+Counting from 1 through 5: 3
+Counting from 1 through 5: 4
+Counting from 1 through 5: 5
+counting from 1 upto 5: 1
+counting from 1 upto 5: 2
+counting from 1 upto 5: 3
+counting from 1 upto 5: 4
+```
 
 ## "_", when we don't actually want the loop variable, we can replace it with and underscore_.
 ```swift
@@ -89,6 +119,9 @@ for _ in 1...3 {
 }
 print(lyric)
 ```
+```python
+Haters gonna hate, hate, hate,
+```
 
 we can use it in this way too.
 ```swift
@@ -97,7 +130,11 @@ for _ in count {
     print("There's no place like home.")
 }
 ```
-
+```python
+There's no place like home.
+There's no place like home.
+There's no place like home.
+```
 
 <br/>
 
@@ -113,6 +150,19 @@ while countdown > 0 {
 
 print("Blast off!")
 ```
+```python
+10...
+9...
+8...
+7...
+6...
+5...
+4...
+3...
+2...
+1...
+Blast off!
+```
 
 ## Random. Create a new random interger or decimal.
 ```swift
@@ -121,6 +171,10 @@ print(id)
 
 let amount = Double.random(in: 0...5)
 print(amount)
+```
+```swift
+3076
+3.406257562896402
 ```
 
 ## While loop with random functionality.
@@ -134,6 +188,13 @@ while roll != 5 {
 }
 print("Finally 5!")
 ```
+```python
+I rolled a 2
+I rolled a 3
+I rolled a 4
+I rolled a 5
+Finally 5!
+```
 
 loops that prints 5 lines of text.
 ```swift
@@ -143,6 +204,15 @@ while counter < 64 {
     counter *= 2
 }
 ```
+```python
+2 is a 2
+4 is a 2
+8 is a 2
+16 is a 2
+32 is a 2
+```
+
+
 ```swift
 var page: Int = 0
 while page < 5 {
@@ -150,6 +220,15 @@ while page < 5 {
     print("I'm reading page \(page).")
 }
 ```
+```swift
+I'm reading page 1.
+I'm reading page 2.
+I'm reading page 3.
+I'm reading page 4.
+I'm reading page 5.
+```
+
+
 ```swift
 var cats: Int = 0
 while cats < 10 {
@@ -161,6 +240,14 @@ while cats < 10 {
     }
 }
 ```
+```swift
+I'm getting another cat.
+I'm getting another cat.
+I'm getting another cat.
+I'm getting another cat.
+Enough cats.
+```
+
 
 <br/>
 
@@ -177,6 +264,11 @@ for filename in filenames {
     print("Found Picture: \(filename)")
 }
 ```
+```python
+Found Picture: my photo.jpg
+Found Picture: someone.jpg
+```
+
 ## Break, that exits a loop immediately and skips all remaining iterations. 
 ```swift
 let number1 = 4
@@ -193,4 +285,7 @@ for i in 1...100000 {
     }
 }
 print(multiples)
+```
+```python
+[28, 56, 84, 112, 140, 168, 196, 224, 252, 280]
 ```
