--- a/_posts/2022-05-21-Day6.md
+++ b/_posts/2022-05-21-Day6.md
@@ -66,7 +66,8 @@ for i in 1...3 {
     print() //this helps break up our output so it looks nicer on the secreen. just add a new line.
 }
 ```
-```python
+
+```swift
 The 1 times table:
  1 x 1 = 1
  1 x 2 = 2
@@ -87,9 +88,12 @@ The 3 times table:
  3 x 3 = 9
  3 x 4 = 12
  3 x 5 = 15
-```
+``` 
 
-## "..<" this is a type of range that counts up to but excluding the final number. "..<" is really helpful for working with arrays, where we count from 0 and often want to count up to but excluding the number of items in the array. we'll see differences between "1...5" and "1..<5"
+
+## ..<
+this is a type of range that counts up to but excluding the final number. "..<" is really helpful for working with arrays, where we count from 0 and often want to count up to but excluding the number of items in the array. we'll see differences between "1...5" and "1..<5"
+
 ```swift
 for i in 1...5 {
     print("Counting from 1 through 5: \(i)")
@@ -111,7 +115,8 @@ counting from 1 upto 5: 3
 counting from 1 upto 5: 4
 ```
 
-## "_", when we don't actually want the loop variable, we can replace it with and underscore_.
+## _
+when we don't actually want the loop variable, we can replace it with and underscore_.
 ```swift
 var lyric = "Haters gonna"
 for _ in 1...3 {
@@ -150,7 +155,8 @@ while countdown > 0 {
 
 print("Blast off!")
 ```
-```python
+
+```swift
 10...
 9...
 8...
@@ -172,6 +178,7 @@ print(id)
 let amount = Double.random(in: 0...5)
 print(amount)
 ```
+
 ```swift
 3076
 3.406257562896402
