--- a/_posts/2022-05-21-Day6.md
+++ b/_posts/2022-05-21-Day6.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "For / While / Continue / Break"
+title:  "For loop / While loop / Random / Continue / Break, How to Skip loop items"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog, jekyll]
 toc: true
