--- a/_posts/2022-04-19-Day1.md
+++ b/_posts/2022-04-19-Day1.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Variable / Constant = let /Intergers = numbers"
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog, jekyll]
+tag: [iOS, SwiftUI, blog]
 toc: true
 author_prifile: false
 sidebar:
