--- a/_posts/2022-04-29-Day2.md
+++ b/_posts/2022-04-29-Day2.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Boolean / How to join strings together."
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog, jekyll]
+tag: [iOS, SwiftUI, blog]
 toc: true
 author_prifile: false
 sidebar:
