--- a/_posts/2022-05-03-Day3.md
+++ b/_posts/2022-05-03-Day3.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Arrays / Dictionaries / Sets / enumeration"
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog, jekyll]
+tag: [iOS, SwiftUI, blog]
 toc: true
 toc_label: "Table of Contents"
 toc_icon: "cog"
