--- a/_posts/2022-05-05-Day4.md
+++ b/_posts/2022-05-05-Day4.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Type annotations / Empty Array"
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog, jekyll]
+tag: [iOS, SwiftUI, blog]
 toc: true
 toc_label: "Table of Contents"
 toc_icon: "cog"
