--- a/_posts/2022-05-13-Day5.md
+++ b/_posts/2022-05-13-Day5.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "If / Logical Operator / Switch / fallthrough / Ternary conditional operator"
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog, jekyll]
+tag: [iOS, SwiftUI, blog]
 toc: true
 toc_label: "Table of Contents"
 toc_icon: "cog"
