--- a/_posts/2022-05-22-Day7.md
+++ b/_posts/2022-05-22-Day7.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Functions / (multiple) Parameter"
+title:  "Functions / Return values / Tuple / Parameter Labels"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
