--- a/_posts/2022-06-12-Day8.md
+++ b/_posts/2022-06-12-Day8.md
@@ -2,7 +2,7 @@
 layout: post
 title:  " Default Values for Parameters / handle Errors in functions / Checkpoint 4"
 categories: SwiftUI
-tag: [iOS, SwiftUI, blog]
+tag: [Swift, iOS, SwiftUI, blog]
 toc: true
 toc_label: "Table of Contents"
 toc_icon: "cog"
