--- a/_posts/2022-04-19-Day1.md
+++ b/_posts/2022-04-19-Day1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Variable / Constant = let /Intergers = numbers"
+title:  "SwiftUI - 1.Variable / Constant = let /Intergers = numbers"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
@@ -10,7 +10,7 @@ sidebar:
 ---
 
 
-[**Watch out!** This is my **first coding**.]
+[**Watch out!** This is my **first coding post**.]
 {: .notice--danger}
 
 <div class="notice--success">
@@ -22,7 +22,6 @@ sidebar:
 </ul>
 </div>
 
-# Day 1
 <br/>
 
 ![apple](/images/2022-04-19-second-commit/image-20220419150815188.png)
@@ -55,7 +54,7 @@ if we don't ever want to change a value, we need to use a 'constant' instead. we
 ```swift
 let managerName = "Michael Scott"
 let dogBreed = "Samoyed"
-let meaningOfLife = "How many roads must a man wak down?"
+let meaningOfLife = "How many roads must a man walk down?"
 print(dogBreed)
 ```
 
@@ -84,7 +83,7 @@ let movie = """
 print(movie)
 ```
 
-we can read the length of a string by writing .count after the name of the variable or constant. Swift also counts spacing and new lines
+we can read the length of a string by writing .count after the name of the variable or constant. Swift also counts "spacing" and "new lines" excluding first line.
 ```swift
 print(movie.count)
 ```
@@ -123,13 +122,13 @@ intergers can be really big - billions,trillions, quadrillions, auintillions - a
 ```swift
 let reallyBig = 100_000_000
 print(reallyBig)
-let reallySmaill = -100____000___000
-print(reallySmaill)
+let reallySmall = -100____000____000
+print(reallySmall)
 ```
 
 we can use arithmetic operators we learned at school. addition, subtraction, multiplication, division.
 ```swift
-let lewerScore = score - 2 
+let lowerScore = score - 2 
 let higherScore = score + 10
 let doubledScore = score * 2
 let squaredScore = score * score
