--- a/_posts/2022-04-29-Day2.md
+++ b/_posts/2022-04-29-Day2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Boolean / How to join strings together."
+title:  "SwiftUI - 2.Boolean / How to join strings together."
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
@@ -66,7 +66,8 @@ let action = "love each other"
 let lyrics = people + " gonna " + action
 print(lyrics)
 ```
-
+# String interpolation, How to put "Code" inside a String
+Put \(code) in the String
 we gonna use string interpolation now. Becasue it's much more efficient than using +. we could create one sting constant and one integer constant, then combine them into a new string
 ```swift
 let myName = "Joseph"
@@ -75,6 +76,13 @@ let age = 56
 let message = "Hi, my name is \(myName) and I'm \(age) years old."
 print(message)
 ```
+
+```siwft
+print("Hello \(2+3) world")
+print("The result of 4 + 5 = \(4 + 5)")
+```
+<h4>Hello 5 world
+The result of 4 + 5 = 9<h4>
 
 we can put calculations inside string interpolation if we want to
 ```swift
