--- a/_posts/2022-05-03-Day3.md
+++ b/_posts/2022-05-03-Day3.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Arrays / Dictionaries / Sets / enumeration"
+title:  "SwiftUI - 3.Arrays / Dictionaries / Sets / enumeration"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
@@ -41,14 +41,14 @@ print(beatles[4]) //result: Joseph
 
 Arrays only ever contains one type of Data at a time. this code is not Allowed. 
 ```swift
-//temperatures.append("Chris")
+temperatures.append("Chris")
 ```
 
 Swift doesn't let us mix two different types of data together, so this kind of code isn't allowed
 ```swift
-//let 1beatle = beatles[0]
-//let 1number = numbers[0]
-//let notAllowed = 1beatle + 1number
+let 1beatle = beatles[0]
+let 1number = numbers[0]
+let notAllowed = 1beatle + 1number
 ```
 
 when we want to start with an empty array, we can add items to it one by one. 
@@ -134,7 +134,7 @@ print(reversedPresidents)
 # Dictionaries
 
 ## How to store and find data in Dictionaries
-## Dictionaries don't store items according to their position like arrays do, nut insetad let us decide where items should be stored. when we wanna print from a dictionary, we can provide a default value to use if the key doesn't exist. 
+## Dictionaries don't store items according to their position like arrays do, but insetad let us decide where items should be stored. when we wanna print from a dictionary, we gotta provide a default value to use if the key doesn't exist. 
 ```swift
 let employee = [
     "name": "Taylor swift",
