--- a/_posts/2022-05-05-Day4.md
+++ b/_posts/2022-05-05-Day4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Type annotations / Empty Array"
+title:  "SwiftUI - 4.Type annotations / Empty Array"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
@@ -15,7 +15,7 @@ sidebar:
 
 Type annotations let us be explicit about what data types we want, and look like this
 ```swift
-let surname: String = "Park"
+let surName: String = "Park"
 var score: Int = 1
 var score1: Double = 3.1415
 var isAuthenticated: Bool = true
