--- a/_posts/2022-05-13-Day5.md
+++ b/_posts/2022-05-13-Day5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "If / Logical Operator / Switch / fallthrough / Ternary conditional operator"
+title:  "SwiftUI - 5.If / Logical Operator / Switch / fallthrough / Ternary conditional operator"
 categories: SwiftUI
 tag: [iOS, SwiftUI, blog]
 toc: true
