--- a/_posts/2022-04-29-Day2.md
+++ b/_posts/2022-04-29-Day2.md
@@ -81,10 +81,10 @@ print(message)
 print("Hello \(2+3) world")
 print("The result of 4 + 5 = \(4 + 5)")
 ```
-<h4>Hello 5 world
-The result of 4 + 5 = 9<h4>
+Hello 5 world
+The result of 4 + 5 = 9
 
-we can put calculations inside string interpolation if we want to
+we can put calculations inside string interpolation if we want to.
 ```swift
 print("5 x 5 is \(5 * 5)")
 ```
