--- a/_posts/2022-04-29-Day2.md
+++ b/_posts/2022-04-29-Day2.md
@@ -77,12 +77,17 @@ let message = "Hi, my name is \(myName) and I'm \(age) years old."
 print(message)
 ```
 
-```siwft
+```swift
 print("Hello \(2+3) world")
 print("The result of 4 + 5 = \(4 + 5)")
 ```
+
+```
 Hello 5 world
 The result of 4 + 5 = 9
+```
+
+<br/>
 
 we can put calculations inside string interpolation if we want to.
 ```swift
